@@ -1,9 +1,20 @@
+Wed Jan  3 07:52:05 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        Reverted my change below, it breaks the singleton on windows, the EXPORT
+        should not be there, seems we need a different way to resolve this
+        problem with FC6.
+
+        Tue Jan  2 14:27:05 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>
+        * ace/Based_Pointer_Repository.h:
+          Use ACE_EXPORT_SINGLETON_DECLARATION to resolve link errors
+          on FC6. Thanks to Olli Savia  <ops@iki.fi> for
+          reporting this and testing out the patch.
+
 Wed Jan  3 07:47:05 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * ASNMP/tests/test_config.h:
           Only define ACE_START_TEST and ACE_END_TEST when they are not
           defined yet. Removed some old code at the same time
-
 
 Wed Jan  3 06:47:58 UTC 2007  J.T. Conklin  <jtc@acorntoolworks.com>
 
